<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            app:cardUseCompatPadding="true">

            <ImageView
                android:id="@+id/iv_meal"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:contentDescription="@string/tags"
                android:scaleType="centerCrop"
                android:src="@drawable/sample_food" />

            <TextView
                android:id="@+id/tv_meal_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:text="@string/meal_name"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_holder_area"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_area"
                app:layout_constraintEnd_toStartOf="@id/tv_category"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categories"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_category"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_area"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/place_holder_instructions"
                    android:textAlignment="center"
                    android:textSize="20sp">

                </TextView>

                <TextView
                    android:id="@+id/tv_instructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/place_holder_instructions_details" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/iv_yt_link"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/ic_video_link"
            android:contentDescription="@string/content_description" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>